<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/inventoryListFragment"
        android:icon="@drawable/ic_nav_inventory"
        android:title="@string/nav_inventory" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/insightsFragment"
        android:icon="@drawable/ic_nav_insights"
        android:title="@string/nav_insights" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />

</menu>
